# libfsrefs

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfsrefs-wiki.ini  libfsrefs.ini  libfsrefs.pc.in  libfsrefs.spec.in  synclibs.ps1  synclibs.sh
dpkg/: control  (+4 more)
fsrefstools/: Makefile.am  fsrefsinfo  fsrefsinfo.c  fsrefsoutput.c  fsrefsoutput.h  fsrefstools_getopt.c  fsrefstools_getopt.h  fsrefstools_i18n.h  fsrefstools_libbfio.h  fsrefstools_libcerror.h  fsrefstools_libclocale.h  fsrefstools_libcnotify.h  fsrefstools_libcstring.h  fsrefstools_libcsystem.h  fsrefstools_libfcache.h  fsrefstools_libfdata.h  fsrefstools_libfdatetime.h  fsrefstools_libfguid.h  fsrefstools_libfsrefs.h  fsrefstools_libfwnt.h  fsrefstools_libuna.h  fsrefstools_output.c  fsrefstools_output.h  fsrefstools_signal.c  fsrefstools_signal.h  fsrefstools_unused.h  info_handle.c  info_handle.h
include/: Makefile.am  libfsrefs.h.in
include/libfsrefs/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfsrefs/: Makefile.am  fsrefs_checkpoint.h  fsrefs_directory_object.h  fsrefs_index.h  fsrefs_metadata_block.h  fsrefs_ministore_tree.h  fsrefs_superblock.h  fsrefs_volume_header.h  fsrefs_volume_information.h  libfsrefs.c  libfsrefs.rc.in  libfsrefs_attribute_values.c  libfsrefs_attribute_values.h  libfsrefs_block_descriptor.c  libfsrefs_block_descriptor.h  libfsrefs_block_descriptors.c  libfsrefs_block_descriptors.h  libfsrefs_block_reference.c  libfsrefs_block_reference.h  libfsrefs_block_tree.c  libfsrefs_block_tree.h  libfsrefs_block_tree_node.c  libfsrefs_block_tree_node.h  libfsrefs_checkpoint.c  libfsrefs_checkpoint.h  libfsrefs_data_run.c  libfsrefs_data_run.h  libfsrefs_debug.c  libfsrefs_debug.h  libfsrefs_definitions.h.in  libfsrefs_directory.c  libfsrefs_directory.h  libfsrefs_directory_entry.c  libfsrefs_directory_entry.h  libfsrefs_directory_object.c  libfsrefs_directory_object.h  libfsrefs_error.c  libfsrefs_error.h  libfsrefs_extern.h  libfsrefs_file_entry.c  (+62 more)
msvscpp/: Makefile.am  libfsrefs.sln
msvscpp/fsrefs_test_attribute_values/: fsrefs_test_attribute_values.vcproj
msvscpp/fsrefs_test_block_descriptor/: fsrefs_test_block_descriptor.vcproj
msvscpp/fsrefs_test_block_descriptors/: fsrefs_test_block_descriptors.vcproj
msvscpp/fsrefs_test_block_reference/: fsrefs_test_block_reference.vcproj
msvscpp/fsrefs_test_block_tree/: fsrefs_test_block_tree.vcproj
msvscpp/fsrefs_test_block_tree_node/: fsrefs_test_block_tree_node.vcproj
msvscpp/fsrefs_test_checkpoint/: fsrefs_test_checkpoint.vcproj
msvscpp/fsrefs_test_data_run/: fsrefs_test_data_run.vcproj
msvscpp/fsrefs_test_directory/: fsrefs_test_directory.vcproj
msvscpp/fsrefs_test_directory_entry/: fsrefs_test_directory_entry.vcproj
msvscpp/fsrefs_test_directory_object/: fsrefs_test_directory_object.vcproj
msvscpp/fsrefs_test_error/: fsrefs_test_error.vcproj
msvscpp/fsrefs_test_file_entry/: fsrefs_test_file_entry.vcproj
msvscpp/fsrefs_test_file_system/: fsrefs_test_file_system.vcproj
msvscpp/fsrefs_test_get_version/: fsrefs_test_get_version.vcproj
msvscpp/fsrefs_test_io_handle/: fsrefs_test_io_handle.vcproj
msvscpp/fsrefs_test_level0_metadata/: fsrefs_test_level0_metadata.vcproj
msvscpp/fsrefs_test_level1_metadata/: fsrefs_test_level1_metadata.vcproj
msvscpp/fsrefs_test_level2_metadata/: fsrefs_test_level2_metadata.vcproj
msvscpp/fsrefs_test_level3_metadata/: fsrefs_test_level3_metadata.vcproj
msvscpp/fsrefs_test_metadata_block/: fsrefs_test_metadata_block.vcproj
msvscpp/fsrefs_test_metadata_block_header/: fsrefs_test_metadata_block_header.vcproj
msvscpp/fsrefs_test_metadata_table/: fsrefs_test_metadata_table.vcproj
msvscpp/fsrefs_test_metadata_value/: fsrefs_test_metadata_value.vcproj
msvscpp/fsrefs_test_ministore_node/: fsrefs_test_ministore_node.vcproj
msvscpp/fsrefs_test_ministore_tree/: fsrefs_test_ministore_tree.vcproj
msvscpp/fsrefs_test_node_header/: fsrefs_test_node_header.vcproj
msvscpp/fsrefs_test_node_record/: fsrefs_test_node_record.vcproj
msvscpp/fsrefs_test_notify/: fsrefs_test_notify.vcproj
msvscpp/fsrefs_test_objects_tree/: fsrefs_test_objects_tree.vcproj
msvscpp/fsrefs_test_superblock/: fsrefs_test_superblock.vcproj
msvscpp/fsrefs_test_support/: fsrefs_test_support.vcproj
msvscpp/fsrefs_test_tools_info_handle/: fsrefs_test_tools_info_handle.vcproj
msvscpp/fsrefs_test_tools_output/: fsrefs_test_tools_output.vcproj
msvscpp/fsrefs_test_tools_signal/: fsrefs_test_tools_signal.vcproj
msvscpp/fsrefs_test_tree_header/: fsrefs_test_tree_header.vcproj
msvscpp/fsrefs_test_volume/: fsrefs_test_volume.vcproj
msvscpp/fsrefs_test_volume_header/: fsrefs_test_volume_header.vcproj
msvscpp/fsrefs_test_volume_information/: fsrefs_test_volume_information.vcproj
msvscpp/fsrefs_test_volume_name/: fsrefs_test_volume_name.vcproj
msvscpp/fsrefsinfo/: fsrefsinfo.vcproj
msvscpp/libbfio/: libbfio.vcproj
msvscpp/libcdata/: libcdata.vcproj
tests/: Makefile.am  atlocal.in  fsrefs_test_attribute_values.c  fsrefs_test_block_descriptor.c  fsrefs_test_block_descriptors.c  fsrefs_test_block_reference.c  fsrefs_test_block_tree.c  fsrefs_test_block_tree_node.c  fsrefs_test_checkpoint.c  fsrefs_test_data_run.c  fsrefs_test_directory.c  fsrefs_test_directory_entry.c  fsrefs_test_directory_object.c  fsrefs_test_error.c  fsrefs_test_file_entry.c  fsrefs_test_file_system.c  fsrefs_test_functions.c  fsrefs_test_functions.h  fsrefs_test_get_version.c  fsrefs_test_getopt.c  fsrefs_test_getopt.h  fsrefs_test_io_handle.c  fsrefs_test_level0_metadata.c  fsrefs_test_level1_metadata.c  fsrefs_test_level2_metadata.c  fsrefs_test_level3_metadata.c  fsrefs_test_libbfio.h  fsrefs_test_libcerror.h  fsrefs_test_libclocale.h  fsrefs_test_libcnotify.h  fsrefs_test_libcstring.h  fsrefs_test_libcsystem.h  fsrefs_test_libfsrefs.h  fsrefs_test_libuna.h  fsrefs_test_macros.h  fsrefs_test_memory.c  fsrefs_test_memory.h  fsrefs_test_metadata_block.c  fsrefs_test_metadata_block_header.c  fsrefs_test_metadata_table.c  (+33 more)
(+58 files in other folders)
