include_HEADERS = \
	libfsrefs.h

pkginclude_HEADERS = \
	libfsrefs/codepage.h \
	libfsrefs/definitions.h \
	libfsrefs/error.h \
	libfsrefs/extern.h \
	libfsrefs/features.h \
	libfsrefs/types.h

EXTRA_DIST = \
	libfsrefs.h.in \
	libfsrefs/definitions.h.in \
	libfsrefs/features.h.in \
	libfsrefs/types.h.in

DISTCLEANFILES = \
	libfsrefs.h \
	libfsrefs/definitions.h \
	libfsrefs/features.h \
	libfsrefs/types.h \
	Makefile \
	Makefile.in

