MSVSCPP_FILES = \
	fsrefs_test_error/fsrefs_test_error.vcproj \
	fsrefs_test_get_version/fsrefs_test_get_version.vcproj \
	fsrefsinfo/fsrefsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsrefs/libfsrefs.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfsrefs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

