MSVSCPP_FILES = \
	fsrefs_test_block_descriptor/fsrefs_test_block_descriptor.vcproj \
	fsrefs_test_block_descriptors/fsrefs_test_block_descriptors.vcproj \
	fsrefs_test_checkpoint/fsrefs_test_checkpoint.vcproj \
	fsrefs_test_directory/fsrefs_test_directory.vcproj \
	fsrefs_test_error/fsrefs_test_error.vcproj \
	fsrefs_test_io_handle/fsrefs_test_io_handle.vcproj \
	fsrefs_test_level2_metadata/fsrefs_test_level2_metadata.vcproj \
	fsrefs_test_level3_metadata/fsrefs_test_level3_metadata.vcproj \
	fsrefs_test_metadata_block/fsrefs_test_metadata_block.vcproj \
	fsrefs_test_metadata_block_header/fsrefs_test_metadata_block_header.vcproj \
	fsrefs_test_metadata_table/fsrefs_test_metadata_table.vcproj \
	fsrefs_test_metadata_value/fsrefs_test_metadata_value.vcproj \
	fsrefs_test_notify/fsrefs_test_notify.vcproj \
	fsrefs_test_superblock/fsrefs_test_superblock.vcproj \
	fsrefs_test_support/fsrefs_test_support.vcproj \
	fsrefs_test_tools_info_handle/fsrefs_test_tools_info_handle.vcproj \
	fsrefs_test_tools_output/fsrefs_test_tools_output.vcproj \
	fsrefs_test_tools_signal/fsrefs_test_tools_signal.vcproj \
	fsrefs_test_volume/fsrefs_test_volume.vcproj \
	fsrefs_test_volume_header/fsrefs_test_volume_header.vcproj \
	fsrefs_test_volume_information/fsrefs_test_volume_information.vcproj \
	fsrefs_test_volume_name/fsrefs_test_volume_name.vcproj \
	fsrefsinfo/fsrefsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsrefs/libfsrefs.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfsrefs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

