MSVSCPP_FILES = \
	fsrefs_test_attribute_values/fsrefs_test_attribute_values.vcproj \
	fsrefs_test_block_descriptor/fsrefs_test_block_descriptor.vcproj \
	fsrefs_test_block_reference/fsrefs_test_block_reference.vcproj \
	fsrefs_test_block_tree/fsrefs_test_block_tree.vcproj \
	fsrefs_test_block_tree_node/fsrefs_test_block_tree_node.vcproj \
	fsrefs_test_checkpoint/fsrefs_test_checkpoint.vcproj \
	fsrefs_test_data_run/fsrefs_test_data_run.vcproj \
	fsrefs_test_directory_entry/fsrefs_test_directory_entry.vcproj \
	fsrefs_test_directory_object/fsrefs_test_directory_object.vcproj \
	fsrefs_test_error/fsrefs_test_error.vcproj \
	fsrefs_test_file_entry/fsrefs_test_file_entry.vcproj \
	fsrefs_test_file_system/fsrefs_test_file_system.vcproj \
	fsrefs_test_io_handle/fsrefs_test_io_handle.vcproj \
	fsrefs_test_metadata_block_header/fsrefs_test_metadata_block_header.vcproj \
	fsrefs_test_ministore_node/fsrefs_test_ministore_node.vcproj \
	fsrefs_test_node_header/fsrefs_test_node_header.vcproj \
	fsrefs_test_node_record/fsrefs_test_node_record.vcproj \
	fsrefs_test_notify/fsrefs_test_notify.vcproj \
	fsrefs_test_objects_tree/fsrefs_test_objects_tree.vcproj \
	fsrefs_test_superblock/fsrefs_test_superblock.vcproj \
	fsrefs_test_support/fsrefs_test_support.vcproj \
	fsrefs_test_tools_info_handle/fsrefs_test_tools_info_handle.vcproj \
	fsrefs_test_tools_output/fsrefs_test_tools_output.vcproj \
	fsrefs_test_tools_signal/fsrefs_test_tools_signal.vcproj \
	fsrefs_test_tree_header/fsrefs_test_tree_header.vcproj \
	fsrefs_test_volume/fsrefs_test_volume.vcproj \
	fsrefs_test_volume_header/fsrefs_test_volume_header.vcproj \
	fsrefsinfo/fsrefsinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsrefs/libfsrefs.vcproj \
	libfusn/libfusn.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfsrefs.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

